--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name: Image-Imlib2
-version: 0.11
+version: 0.12
 license: perl
 distribution_type: module
 requires:
@@ -8,4 +8,8 @@ requires:
 recommends: {}
 build_requires: {}
 conflicts: {}
-generated_by: Module::Build version 0.16
+provides:
+  Image::Imlib2:
+    file: lib/Image/Imlib2.pm
+    version: 0.12
+generated_by: Module::Build version 0.19
