Import of LBROCARD/Image-Imlib2-1.08 from CPAN.
gitpan-cpan-distribution: Image-Imlib2
gitpan-cpan-version:      1.08
gitpan-cpan-path:         LBROCARD/Image-Imlib2-1.08.tar.gz
gitpan-cpan-author:       LBROCARD
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,8 @@
 --- #YAML:1.0
 name: Image-Imlib2
-version: 1.07
+version: 1.08
 author:
   - Leon Brocard, leon@astray.com
 abstract: Interface to the Imlib2 image library
 license: perl
-requires:
-  Module::Build: 0.20
-  Test::More: 0.01
-provides:
-  Image::Imlib2:
-    file: lib/Image/Imlib2.pm
-    version: 1.07
-generated_by: Module::Build version 0.2605
+generated_by: Module::Build version 0.2611, without YAML.pm
