Import of LBROCARD/Image-Imlib2-1.10 from CPAN.
gitpan-cpan-distribution: Image-Imlib2
gitpan-cpan-version:      1.10
gitpan-cpan-path:         LBROCARD/Image-Imlib2-1.10.tar.gz
gitpan-cpan-author:       LBROCARD
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,8 +1,8 @@
 --- #YAML:1.0
 name: Image-Imlib2
-version: 1.09
+version: 1.10
 author:
-  - Leon Brocard, leon@astray.com
+  - Leon Brocard, acme@astray.com
 abstract: Interface to the Imlib2 image library
 license: perl
 generated_by: Module::Build version 0.2612, without YAML.pm
