--- a/META.yml
+++ b/META.yml
@@ -1,8 +1,20 @@
---- #YAML:1.0
+---
 name: Image-Imlib2
-version: 1.13
+version: 2.00
 author:
-  - Leon Brocard, acme@astray.com
+  - 'Leon Brocard, acme@astray.com'
 abstract: Interface to the Imlib2 image library
 license: perl
-generated_by: Module::Build version 0.2612, without YAML.pm
+resources:
+  license: http://dev.perl.org/licenses/
+requires:
+  Module::Build: 0.20
+  Test::More: 0.01
+provides:
+  Image::Imlib2:
+    file: lib/Image/Imlib2.pm
+    version: 2.00
+generated_by: Module::Build version 0.2808
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.2.html
+  version: 1.2
