--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Image-Imlib2
-version: 2.02
+version: 2.03
 author:
   - 'Leon Brocard, acme@astray.com'
 abstract: Interface to the Imlib2 image library
@@ -10,11 +10,13 @@ resources:
 requires:
   Module::Build: 0.20
   Test::More: 0.01
+configure_requires:
+  Module::Build: 0.35
 provides:
   Image::Imlib2:
     file: lib/Image/Imlib2.pm
-    version: 2.02
-generated_by: Module::Build version 0.280801
+    version: 2.03
+generated_by: Module::Build version 0.35
 meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.2.html
-  version: 1.2
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
